--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
